--- a/index.html
+++ b/index.html
@@ -1,90 +1,282 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Card with Glow</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Cartas de Predicción</title>
   <style>
-    body {
-      margin: 0;
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: radial-gradient(circle at center, #1a1a1a, #000);
-      overflow: hidden;
-      font-family: 'Arial', sans-serif;
-    }
+ 
+ 
+body {
+  background-color: #0e0c24;
+  margin: 0;
+  overflow: hidden;
+  font-family: 'Georgia', serif;
+  color: white;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  perspective: 1200px; /* Profundidad para efecto 3D */
+}
 
-    #card {
-      width: 740px;
-      height: 900px;
-      background: url('tu-imagen.jpg') no-repeat center center / cover;
-      border-radius: 20px;
-      box-shadow: 0 0 60px rgba(0, 0, 0, 0.6);
-      position: relative;
-      z-index: 1;
-    }
+canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 0;
+}
 
-    .magic-glow {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      box-sizing: border-box;
-      pointer-events: none;
-      z-index: 2;
-      overflow: hidden;
-      border-radius: inherit;
-    }
+#card {
+  width: 740px;
+  height: 900px;
+  border-radius: 15px;
+  background-size: cover;
+  background-position: center;
+  box-shadow: 0 0 60px rgba(0, 255, 255, 0.3), 0 0 80px rgba(255, 255, 255, 0.05) inset;
+  cursor: pointer;
+  z-index: 1;
+  position: relative;
 
-    .magic-glow::before,
-    .magic-glow::after {
-      content: '';
+  transform-style: preserve-3d;
+  transform-origin: bottom center; /* ✅ Punto de giro: base de la carta */
+  transition: transform 0.4s ease;
+
+
+
+}
+
+#card:hover {
+  transform: rotateX(10deg) translateY(70px); /* ✅ Inclinación hacia adelante */
+}
+
+.card-clicked {
+  transform: rotateX(20deg) translateY(20px); /* ✅ Coincide con hover, podés ajustar */
+}
+
+    #prediction {
       position: absolute;
       top: 50%;
       left: 50%;
+      width: 480px;
       transform: translate(-50%, -50%);
-      width: 100%;
-      height: 100%;
-      background: radial-gradient(circle at center, rgba(255, 255, 255, 0.05), transparent 80%);
-      animation: gradient-shift 15s ease infinite;
-      mix-blend-mode: screen;
-      border-radius: 50%;
-      opacity: 0.2;
+      color: white;
+      font-size: 34px;
+      padding: 10px;
+      text-shadow: 1px 1px 20px rgba(130, 230, 255, 0.7);
+      border-radius: 10px;
+      display: none;
+      text-align: center;
     }
 
-    .magic-glow::after {
-      animation-duration: 45s;
-      opacity: 0.5;
-    }
 
-    @keyframes gradient-shift {
-      0% {
-        transform: translate(-50%, -50%) scale(1);
-      }
-      50% {
-        transform: translate(-50%, -50%) scale(1.05);
-      }
-      100% {
-        transform: translate(-50%, -50%) scale(1);
-      }
-    }
 
-    /* Responsive adjustments */
-    @media (max-width: 800px) {
-      #card {
-        width: 90vw;
-        height: calc(90vw * 1.2); /* Mantiene proporción */
-      }
-    }
+.magic-glow {
+  position: absolute;
+   border-radius: 15px;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  overflow: hidden;
+  z-index: 2;
+}
+
+
+.magic-glow::before,
+.magic-glow::after {
+  content: '';
+  position: absolute;
+  width: 200%;
+  height: 200%;
+   background: linear-gradient(250deg, 
+    #0225363b, 
+    #083c7034, 
+    #4a08a081, 
+    #5c038536, 
+    #05557c2c);
+  background-size: 1000% 1000%;
+  animation: gradient-shift 30s ease infinite;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  mix-blend-mode: screen;
+  filter: blur(25px); /* Agrega un glow difuso */
+  border-radius: 50%;
+  opacity: 0.3;
+}
+
+
+.magic-glow::after {
+  animation-duration: 45s;
+  opacity: 0.5;
+}
+
+@keyframes gradient-shift {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.sparkle {
+  position: absolute;
+  width: 6px;
+  height: 6px;
+  background: white;
+  border-radius: 50%;
+  box-shadow: 0 0 8px cyan;
+  animation: sparkle-float 5s linear forwards;
+  opacity: 0.8;
+}
+
+@keyframes sparkle-float {
+  0% {
+    transform: translateY(0) scale(1);
+    opacity: 0.8;
+  }
+  100% {
+    transform: translateY(-50px) scale(0.5);
+    opacity: 0;
+  }
+}
+
+
+
+
   </style>
 </head>
 <body>
-  <div id="card">
-    <div class="magic-glow"></div>
-  </div>
+<audio id="flip-sound" src="flip-1.MP3" preload="auto"></audio>
+
+  <canvas id="stars"></canvas>
+
+<div id="card">
+  <div id="prediction"></div>
+  <div class="magic-glow"></div>  <!-- <- moved inside #card -->
+</div>
+
+  <script>
+    // Predicción
+    const card = document.getElementById('card');
+    const predictionText = document.getElementById('prediction');
+    const reversoImg = "reverso.png";
+    const prediccionImg = "prediccion.png";
+    const predicciones = [
+      "Una oportunidad inesperada tocará tu puerta.",
+      "Confía en tu intuición, hoy más que nunca.",
+      "Un viejo amigo traerá noticias.",
+      "La respuesta que buscas está en tu interior.",
+      "Cambios positivos vienen en camino.",
+      "Evita decisiones impulsivas hoy.",
+      "Un viaje revelador está por llegar.",
+      "Escucha con atención: alguien tiene algo importante que decirte.",
+      "Tu creatividad te abrirá nuevas puertas.",
+      "La paciencia será recompensada.",
+      "Una verdad saldrá a la luz.",
+      "Nuevos comienzos traerán alivio.",
+      "No temas dejar ir lo que ya no te sirve.",
+      "La fortuna te sonríe si das el primer paso.",
+      "Descubrirás una habilidad escondida."
+    ];
+    let mostrandoPrediccion = false;
+    card.style.backgroundImage = `url('${reversoImg}')`;
+
+    const flipSound = document.getElementById("flip-sound");
+
+    card.addEventListener("click", () => {
+    if (mostrandoPrediccion) {
+    card.style.backgroundImage = `url('${reversoImg}')`;
+    predictionText.style.display = "none";
+    mostrandoPrediccion = false;
+  } else {
+    const randomIndex = Math.floor(Math.random() * predicciones.length);
+    predictionText.innerText = predicciones[randomIndex];
+    card.style.backgroundImage = `url('${prediccionImg}')`;
+    predictionText.style.display = "block";
+    mostrandoPrediccion = true;
+  }
+
+card.classList.add("card-clicked");
+  flipSound.currentTime = 0; // reinicia el sonido por si hacés click varias veces
+  flipSound.play();
+
+  setTimeout(() => {
+    card.classList.remove("card-clicked");
+  }, 300); // dura 0.3s igual que la transición
+
+
+
+
+    });
+
+    // Estrellas
+    const canvas = document.getElementById('stars');
+    const ctx = canvas.getContext('2d');
+    let stars = [];
+
+    function initStars() {
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+      stars = [];
+      for (let i = 0; i < 100; i++) {
+        stars.push({
+          x: Math.random() * canvas.width,
+          y: Math.random() * canvas.height,
+          r: Math.random() * 1.5 + 0.3,
+          dx: (Math.random() - 0.5) * 0.2,
+          dy: (Math.random() - 0.5) * 0.2
+        });
+      }
+    }
+
+    function animateStars() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      ctx.fillStyle = 'white';
+      for (let star of stars) {
+        ctx.beginPath();
+        ctx.arc(star.x, star.y, star.r, 0, 2 * Math.PI);
+        ctx.fill();
+        star.x += star.dx;
+        star.y += star.dy;
+
+        if (star.x < 0 || star.x > canvas.width) star.dx *= -1;
+        if (star.y < 0 || star.y > canvas.height) star.dy *= -1;
+      }
+      requestAnimationFrame(animateStars);
+    }
+
+    window.addEventListener('resize', initStars);
+
+    initStars();
+    animateStars();
+
+// Magia flotante sobre la carta
+const glowContainer = document.querySelector('.magic-glow');
+
+function createSparkle() {
+  const sparkle = document.createElement('div');
+  sparkle.classList.add('sparkle');
+  sparkle.style.left = `${Math.random() * 100}%`;
+  sparkle.style.top = `${Math.random() * 100}%`;
+  sparkle.style.animationDuration = `${Math.random() * 3 + 2}s`;
+  glowContainer.appendChild(sparkle);
+  setTimeout(() => sparkle.remove(), 5000);
+}
+
+setInterval(createSparkle, 300);
+
+
+
+
+  </script>
+
 </body>
 </html>
-
