--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@ canvas {
   border-radius: 15px;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+ width: 740px;
+  height: 900px;
   pointer-events: none;
   overflow: hidden;
   z-index: 2;
