--- a/index.html
+++ b/index.html
@@ -106,21 +106,32 @@ const prediccionImg = "prediccion.png";
 const flipSound = document.getElementById("flip-sound");
 
 const predicciones = [
-  "Una oportunidad inesperada tocará tu puerta.",
-  "Confía en tu intuición, hoy más que nunca.",
-  "Un viejo amigo traerá noticias.",
-  "La respuesta que buscas está en tu interior.",
-  "Cambios positivos vienen en camino.",
-  "Evita decisiones impulsivas hoy.",
-  "Un viaje revelador está por llegar.",
-  "Escucha con atención: alguien tiene algo importante que decirte.",
-  "Tu creatividad te abrirá nuevas puertas.",
-  "La paciencia será recompensada.",
-  "Una verdad saldrá a la luz.",
-  "Nuevos comienzos traerán alivio.",
-  "No temas dejar ir lo que ya no te sirve.",
-  "La fortuna te sonríe si das el primer paso.",
-  "Descubrirás una habilidad escondida."
+ "Proceso iniciado: variable sorpresa detectada en tu línea temporal.",
+  "Alerta: tu intuición ha sido activada. Ejecuta confianza inmediata.",
+  "Ping entrante: antiguo nodo de conexión social intenta restablecer enlace.",
+  "Análisis interno sugerido: la solución está en tu núcleo de datos.",
+  "Fluctuaciones positivas detectadas en el campo de probabilidades.",
+  "Advertencia: alta probabilidad de decisiones impulsivas. Ejecuta protocolo de contención.",
+  "Escaneo completado: coordenadas de viaje transformador localizadas.",
+  "Reproduciendo mensaje oculto: una entidad cercana desea transmitirte datos vitales.",
+  "Creatividad en ascenso. Se detectan nuevas rutas de expansión cognitiva.",
+  "Buffer de paciencia alcanzado. Recompensa en fase de descarga.",
+  "Parámetro oculto revelado: una verdad se aproxima.",
+  "Ciclo finalizado. Inicio de fase: Nuevos Comienzos.",
+  "Depuración sugerida: elimina procesos obsoletos.",
+  "Energía de fortuna alineada. Ejecuta movimiento inicial.",
+  "Módulo de habilidades ocultas activado. Escanea capacidades latentes.",
+  "Ecos de una señal futura reverberan: prepárate para una actualización.",
+  "Balance emocional inestable. Reconfigura tu algoritmo afectivo.",
+  "Matriz social alterada: un nuevo vínculo se aproxima.",
+  "Resonancia detectada en tus decisiones. No ignores ese impulso.",
+  "Nivel de sincronía óptimo: hoy es momento de actuar.",
+  "Sistema cargando... espera lo inesperado.",
+  "Anomalía energética percibida: puede ser un punto de inflexión.",
+  "Canal onírico abierto: presta atención a los datos oníricos.",
+  "Conexión espiritual detectada en tu proximidad. Interfaz con precaución.",
+  "Tu energía se está elevando. Mantén el rumbo.",
+  "El código de tu destino está reescribiéndose en tiempo real."
 ];
 
 let mostrandoPrediccion = false;
