--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>ProfecIA</title>
   <style>
 body {
-  background-color: #0e0c24;
+  background-color: #080713;
   margin: 0;
   overflow: hidden;
   font-family: 'Georgia', serif;
@@ -33,7 +33,7 @@ canvas#stars {
   border-radius: 15px;
   background-size: cover;
   background-position: center;
-  box-shadow: 0 0 20px rgba(0, 255, 255, 0.3);
+  box-shadow: 0 0 28px rgba(0, 255, 255, 0.3);
   cursor: pointer;
   position: relative;
   z-index: 1;
